--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,8 @@
     <string name="mobile_liu">流量统计</string>
     <string name="cache_clean">缓存清理</string>
     <string name="advance_tools">高级工具</string>
-    <string name="title_activity_base">BaseActivity</string>
+
+    <string name="enter_text">    请输入内容或网址</string>
+    <string name="concel_enter">取消</string>
+    <string name="search">搜索</string>
 </resources>
