--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,8 +18,11 @@
     <string name="clean_cache_tv_scanning">现在扫描：</string>
     <string name="clean_cache_tv_totalcache">总缓存大小：</string>
     <string name="clean_cache_btn_cleanallcache">全部清理</string>
-    <!--清理缓存-->
+    <!--软件管理-->
     <string name="app_manager">软件管理</string>
     <string name="app_manager_loading">正在加载中...</string>
     <string name="app_manager_userapp_amount">用户软件(0)</string>
+
+    <!--程序锁-->
+    <string name="app_lock">程序锁</string>
 </resources>
